--- a/assets/sass/abstracts/_variables.scss
+++ b/assets/sass/abstracts/_variables.scss
@@ -4,6 +4,8 @@ $isabeline: #eeeded;
 $spanish-gray: #989797;
 $coral: #EACB31;
 $flame: #e4572e;
+$shiny-shamrock: #4ca866;
+$turquoise-green: #9dcfab;
 $blue-de-france: #3c91e6;
 $black: #000;
 
