--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -48,6 +48,10 @@
 		justify-content: center;
 	}
 
+	&__text {
+		padding-top: 3em;
+	}
+
 	&__title {
 		font-size: $xxx-large;
 	}
